--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+     "test": "./node_modules/.bin/mocha ./test/test.js"
   },
   "dependencies": {
-    "express": "3.4.0",
-    "jade": "*"
+    "express": "~3.4.0",
+    "jade": "~0.35.0",
+    "sqlite3": "~2.1.17"
+  },
+  "devDependencies": {
+      "mocha" : "*"
   }
+
 }
